// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider applies custom styles: with custom styles 1`] = `
<View
  style={
    {
      "width": 100,
    }
  }
  testID="slider-test"
>
  <View
    disabled={false}
    maximumTrackStyle={
      {
        "backgroundColor": "rgba(98,0,238, 0.3)",
      }
    }
    maximumValue={280}
    minimumTrackStyle={
      {
        "backgroundColor": "rgb(98,0,238)",
      }
    }
    minimumValue={0}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    step={1}
    testID="mocked-slider"
    thumbStyle={
      {
        "backgroundColor": "rgb(98,0,238)",
        "borderRadius": 12,
        "height": 12,
        "width": 12,
      }
    }
    trackStyle={
      {
        "borderRadius": 2,
        "height": 4,
      }
    }
    value={140}
  />
</View>
`;

exports[`Slider renders 1`] = `
<View
  style={{}}
  testID="slider-test"
>
  <View
    disabled={false}
    maximumTrackStyle={
      {
        "backgroundColor": "rgba(98,0,238, 0.3)",
      }
    }
    maximumValue={280}
    minimumTrackStyle={
      {
        "backgroundColor": "rgb(98,0,238)",
      }
    }
    minimumValue={0}
    onSlidingComplete={[Function]}
    onValueChange={[Function]}
    step={1}
    testID="mocked-slider"
    thumbStyle={
      {
        "backgroundColor": "rgb(98,0,238)",
        "borderRadius": 12,
        "height": 12,
        "width": 12,
      }
    }
    trackStyle={
      {
        "borderRadius": 2,
        "height": 4,
      }
    }
    value={140}
  />
</View>
`;
